--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>MY first github report</title>
 </head>
 <body>
-    
+    <p>i can fixed it inshallah</p>
+    <p>when i wrote something on vs code then i wrote again in terminal </p>
+    <ol>
+        <li>Git add</li>
+        <li>Git commit -m "random"</li>
+        <li>Git push</li>
+        <li>Thats all</li>
+    </ol>
 </body>
 </html>
