--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY first github report ekhane kisulikeh jodi save koren, then okahne pull koren tahole vs e upste hie jabe</title>
     <title>MY first github report</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>i can fixed it inshallah</p>
@@ -16,5 +17,6 @@
         <li>Git push</li>
         <li>Thats all</li>
     </ol>
+    <img src="mosque-gcb761466e_1920.jpg" alt="">
 </body>
 </html>
