--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>i can fixed it inshallah</p>
     <p>when i wrote something on vs code then i wrote again in terminal </p>
     <ol>
-        <li>Git add</li>
+        <li class="birani">Git add</li>
         <li>Git commit -m "random"</li>
         <li>Git push</li>
         <li>Thats all</li>
